Add basic game drawing

--- a/index.html
+++ b/index.html
@@ -9,6 +9,27 @@
     <script src="source.js" defer></script>
 </head>
 <body>
-    TEST
+    <div class="player-name-container">
+        <div class="player-name" data-name="1">p one</div>
+        <div class="player-name" data-name="2">p two</div>
+    </div>
+    <div class="game-container">
+        <div class="game-box-container">
+            <div class="game-box" data-box="0"></div>
+            <div class="game-box" data-box="1"></div>
+            <div class="game-box" data-box="2"></div>
+        </div>
+        <div class="game-box-container">
+            <div class="game-box" data-box="3"></div>
+            <div class="game-box" data-box="4"></div>
+            <div class="game-box" data-box="5"></div>
+        </div>
+        <div class="game-box-container">
+            <div class="game-box" data-box="6"></div>
+            <div class="game-box" data-box="7"></div>
+            <div class="game-box" data-box="8"></div>
+        </div>
+    </div>
+    <input type="button" value="Reset" id="reset-btn">
 </body>
 </html>
